@@ -1,5 +1,10 @@
 2008-08-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* gnu/javax/management/Server.java:
+	Genericised.
+
+2008-08-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* gnu/javax/management/Translator.java:
 	Genericised.
 
